Revision history for Perl extension Padre::Plugin::PerlTidy.

{{$NEXT}}

0.13   2010.10.25
    - Switched to Dist::Zilla (AZAWAWI)
    - Fixed t/00-load.t to work under no DISPLAY (AZAWAWI)
    - Fix the uninitialized variable warning when tidying an unsaved tab (AZAWAWI)
    - Updated Arabic translation (AZAWAWI)

0.12  Tue Oct 12 2010
    - Fix duplicate "my $output" call

0.11  Mon Oct 11 2010
    - Added translations:
      - Turkish (BURAK)
    - When tidying and exporting an unsaved document or text, the tab title is
      now used instead of the undefined document filename (AZAWAWI)
    - Prevent the current destructive nature when tidying a non-Perl document
      or text (AZAWAWI)
    - Re-used standard Padre's message and error method calls instead of
      Wx::MessageBox (AZAWAWI, idea from SZABGAB++)
    - Fixed RT #61993 "Can't tidy code when the bottom pane is off on Padre startup"
      (AZAWAWI, Reported by RENEEB++)

0.10  Thu Jan 21 2010
    - A variety of cleanups to use Padre::Current more efficiently (ADAMK)
    - Added menu separator (ADAMK)
    - A somewhat cleaner code style that is closer to general conventions (ADAMK)
    - Added project config file that matches that of Padre itself (ADAMK)
    - Applied the Perl::Tidy plugin to itself, using the project config (ADAMK, BRICAS)
    - Added a few more menu tests (BRICAS)

0.09  Thu Jan 14 2010
    - Fixed #776: PerlTidy needs -nse and -nst options (MRWHIPPLE)
    - _T() replaced with Wx::gettext() (BRICAS)
    - Use new project config setting (config_perltidy) if available (BRICAS)

0.08  Mon Aug 17 2009
    - Center editor on active line after format (claudio)
    - Make cursor location storage less resource hungry (claudio)
    - Actually install the translations (RSN)
    - Added translations:
      - Japanese (ishigaki)
    - Updates for latest (0.43) API (BRICAS)
    - Add pod stubs so pod coverage will pass (BRICAS)
    - Renamed to the new Padre 0.43 PO naming scheme (azawawi)
