@@ -1,6 +1,7 @@
 Revision history for Perl extension Padre::Plugin::PerlTidy.
 
 {{$NEXT}}
+    - Fixed t/01-menu.t to work under no DISPLAY (AZAWAWI)
 
 0.13   2010.10.25
     - Switched to Dist::Zilla (AZAWAWI)
